Changes in Path/URI handling, with corrected RFC-3986 'resolve'.
git-svn-id: svn://sourceware.org/svn/kawa/trunk@8634 5e0a886f-7f45-49c5-bc19-40643649e37f